# omniwheel_mujoco

./: .dockerignore  .gitmodules  Dockerfile  README.md  build_and_run.sh  build_and_run_static.sh  cyclonedds.xml
mujoco/: omni_pendulum.xml  scene.xml  scene_static.xml
mujoco/meshes/: pendulum_ee.STL  pendulum_link1.STL  pendulum_link2.STL  roller.STL
simulate/: config.yaml  config_static.yaml
src/omniwheel_mujoco_sim/: CMakeLists.txt  package.xml
src/omniwheel_mujoco_sim/launch/: sim.launch.py
src/omniwheel_mujoco_sim/src/: main.cpp
src/omniwheel_mujoco_sim/urdf/: omniwheel_sim.urdf
